--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /build/
 src/main/resources/docs/
 
-# MacOS custom attributes files created by Finder
+# MacOS custom attributes files created dueDate Finder
 .DS_Store
 *.iml
 bin/
